# pd-training

./: .gitignore  README.md  pyproject.toml
datasets/: airports.csv
src/: bmi.csv  read_write_csv_db.py  reverse.py
src/arjan/: read-csv-compressed.py  rw-csv.py
src/pandas_series/: commands.md  dataschool_series.ipynb  learning.ipynb  missing_values.ipynb  pandas-compete-course.ipynb
src/pandas_series/resources/: iran_surfey_2.json  iran_survey.csv  iran_survey.json  iran_survey.xlsx  modified_pokemons.csv
src/yt/: gta.db
