[tool.poetry]
name = "pandas training"
version = "1.0.0"
description = "A simple  project for learning pandas library"
authors = ["Oveys Safarnejad <safarnejad@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
jupyterlab = "^4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
